# remake_mp2_lab4

./: .gitignore  CMakeLists.txt  main.cpp
inc/: HashTable.h  NodeTable.h  SortedTable.h  Table.h  monom.h  polinom.h
src/: HashTable.cpp  NodeTable.cpp  SortedTable.cpp  monom.cpp  polinom.cpp
test/: test_HashTable.cpp  test_NodeTable.cpp  test_SortedTable.cpp
